--- a/order.yml
+++ b/order.yml
@@ -8,5 +8,10 @@ spring:
     url: jdbc:mysql://localhost:3306/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  rabbitmq:
+    host: 192.168.48.200
+    port: 5672
+    username: guest
+    password: guest
 server:
   port: 8081
