--- a/product-dev.yml
+++ b/product-dev.yml
@@ -13,5 +13,8 @@ spring:
     port: 5672
     username: guest
     password: guest
+  redis:
+    host: 192.168.48.200
+    port: 6379
 server:
   port: 8082
