--- a/product-dev.yml
+++ b/product-dev.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: admin
-    url: jdbc:mysql://localhost:3306/sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.1.180:3306/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
   rabbitmq:
